# CatLauncher

./: .env.example  .gitignore  AGENTS.md  DND-Tutorial.md  README.md  RefactoringReport.md  latest.json  worldoptions.json
cat-launcher/src-tauri/: .gitignore  Cargo.toml  mods.json  rustfmt.toml  settings.json  tauri.conf.json
cat-launcher/src-tauri/bindings/: Achievement.ts  BackupEntry.ts  CharacterAchievements.ts  ColorTheme.ts  DownloadProgress.ts  Font.ts  GameErrorPayload.ts  GameEvent.ts  GameExitPayload.ts  GameRelease.ts  GameReleaseStatus.ts  GameVariant.ts  GameVariantInfo.ts  InstallationProgressPayload.ts  InstallationProgressStatus.ts  LastModActivity.ts  Link.ts  ManualBackupEntry.ts  Mod.ts  ModActivity.ts  ModInstallation.ts  ModInstallationStatus.ts  ModsUpdatePayload.ts  ModsUpdateStatus.ts  ReleaseType.ts  ReleasesUpdatePayload.ts  ReleasesUpdateStatus.ts  Settings.ts  Soundpack.ts  SoundpackActivity.ts  SoundpackInstallProgressStatus.ts  SoundpackInstallStatus.ts  SoundpackInstallStatusPayload.ts  SoundpackInstallation.ts  SoundpackInstallationStatus.ts  SoundpacksForVariant.ts  StockMod.ts  StockSoundpack.ts  StockTileset.ts  Theme.ts  (+11 more)
cat-launcher/src-tauri/capabilities/: default.json  desktop.json
cat-launcher/src-tauri/coded_error/: Cargo.toml
cat-launcher/src-tauri/coded_error/src/: lib.rs
cat-launcher/src-tauri/content/: mods.json  soundpacks.json  tilesets.json  world_options_bn.json  world_options_dda.json  world_options_tlg.json
cat-launcher/src-tauri/content/themes/: base_colors-abyss.json  base_colors-articblush.json  base_colors-blood_moon.json  base_colors-catppuccin.json  base_colors-dark.json  base_colors-default-sleek.json  base_colors-default.json  base_colors-empyrium.json  base_colors-green.json  base_colors-high-contrast.json  base_colors-iceberg.json  base_colors-iceberg_light.json  base_colors-kanagawa.json  base_colors-oxygen.json  base_colors-shogun.json  base_colors-spark.json  base_colors-sun.json  base_colors-vector.json  base_colors-vintage.json  base_colors-white.json  base_colors_amber.json  base_colors_gruvbox-light.json  base_colors_one-dark.json  base_colors_solarized.json
cat-launcher/src-tauri/icons/: icon.icns
cat-launcher/src-tauri/migrations/: 20240520000000_create_settings_table.sql
cat-launcher/src-tauri/releases/: BrightNights.json  DarkDaysAhead.json
cat-launcher/src-tauri/resources/: settings.json
cat-launcher/src-tauri/schemas/: schema.sql
cat-launcher/src-tauri/src/: constants.rs  lib.rs  main.rs  paths.rs  utils.rs
cat-launcher/src-tauri/src/achievements/: achievements.rs  commands.rs  mod.rs  types.rs
cat-launcher/src-tauri/src/active_release/: active_release.rs  commands.rs  mod.rs
cat-launcher/src-tauri/src/analytics/: helpers.rs  macros.rs  mod.rs  service.rs  trait.rs
cat-launcher/src-tauri/src/backups/: backups.rs  commands.rs  lib.rs  logic.rs  migration.rs  mod.rs  types.rs
cat-launcher/src-tauri/src/basic_info/: basic_info.rs  commands.rs  mod.rs
cat-launcher/src-tauri/src/fetch_releases/: commands.rs  error.rs  fetch_releases.rs  game_release.rs  github_fetch.rs  mod.rs  release_notes.rs  utils.rs
cat-launcher/src-tauri/src/filesystem/: paths.rs  utils.rs
cat-launcher/src-tauri/src/fonts/: commands.rs  font_service.rs  mod.rs
cat-launcher/src-tauri/src/game_release/: error.rs  game_release.rs  mod.rs  utils.rs
cat-launcher/src-tauri/src/game_tips/: commands.rs  error.rs  game_tips.rs  lib.rs  mod.rs  types.rs
cat-launcher/src-tauri/src/guide/: commands.rs  lib.rs  mod.rs  types.rs
cat-launcher/src-tauri/src/import_export/: commands.rs  export.rs  import.rs  mod.rs
cat-launcher/src-tauri/src/infra/: archive.rs  archive_extractor.rs  command_error.rs  consts.rs  database.rs  download.rs  http_client.rs  mod.rs  rfc3339.rs  utils.rs
cat-launcher/src-tauri/src/install_release/: channel_reporter.rs  (+6 more)
scripts/bump_version/: README.md  pyproject.toml
scripts/schema_validator/: README.md  pyproject.toml
(+494 files in other folders)
