[project]
name = "bump-version"
version = "0.1.0"
description = "Automatically bump version across all project files"
readme = "README.md"
authors = [
    { name = "Abhishek Kumar", email = "abhi.kr.2100@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "semver>=3.0.0",
    "tomlkit>=0.12.0",
]

[project.scripts]
bump-version = "bump_version.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
